<resources>
    <string name="app_name">CapstoneApp</string>
    <string name="popular">Popular Movie</string>
    <string name="top_rated">Top Rated</string>
    <string name="people">People</string>
    <string name="up_coming">upComing</string>
    <string name="favorite">Favorite</string>
    <string name="now_playing">Now Playing</string>
    <string name="transition_name">example</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="poster">poster_image</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="welcome">Welcom To Movie App</string>
    <string name="register">Register As New Account</string>
    <string name="account">Already Have Account</string>
    <string name="logout">Logout</string>
    <string name="create">Create Account</string>
    <string name="login">Login</string>
    <string name="panner_size">BANNER</string>
    <string name="unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="create_account">Create New Account</string>
</resources>
