<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <item
        android:id="@+id/popular"
        android:title="@string/popular"
        ></item>


    <item
        android:id="@+id/top_rated"
        android:title="@string/top_rated"></item>




    <item
        android:id="@+id/up_coming"
        android:title="@string/up_coming"></item>


    <item
        android:id="@+id/now_playing"
        android:title="@string/now_playing"></item>



    <item
        android:id="@+id/people"
        android:title="@string/people"></item>


    <item
        android:id="@+id/favorite"
        android:title="@string/favorite"></item>

<item android:id="@+id/logout"
    android:title="@string/logout"></item>

</menu>