<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:background="#ffffff"
    android:layoutDirection="rtl">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/welcome"
        android:textColor="#93031b"
        android:textStyle="bold"
        android:textSize="30sp" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="183dp"
        android:background="#05a147"
        android:text="@string/register"
        android:textColor="#ffffff" />


    <Button
        android:id="@+id/old_account_button"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="105dp"
        android:background="#fdfdfd"
        android:text="@string/account" />

</RelativeLayout>