<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firebase.RegisterActivity"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_toolbar"/>
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_marginTop="70dp"
            android:layout_marginBottom="40dp"
            android:textSize="30dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create New Account"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/name"
            android:layout_width="322dp"

            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:paddingLeft="50dp"
                android:layout_marginRight="20dp"
                android:hint="@string/name"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20dp">

            <EditText
                android:inputType="textEmailAddress"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:paddingLeft="30dp"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"

            android:layout_marginLeft="20sp"
            android:layout_marginRight="20dp">

            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textWebPassword"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20dp"
                android:paddingLeft="30dp"/>

        </android.support.design.widget.TextInputLayout>


        <Button
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            tools:layout_editor_absoluteX="108dp"
            tools:layout_editor_absoluteY="445dp"
            />

    </LinearLayout>


</FrameLayout>