<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">


    <android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/login_toolbar"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login To Your Account"
            android:textColor="#000000"
            android:textSize="30dp"
            android:layout_marginBottom="27dp"
            android:layout_gravity="center"/>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="149dp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20dp">

            <EditText
                android:inputType="textEmailAddress"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="238dp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20dp">

            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textWebPassword"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20dp"/>

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/login_button"
            android:layout_width="137dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="50sp"
            android:background="#05a147"
            android:text="@string/login"
            android:textSize="20sp"
            android:textColor="#ffffff"
            tools:layout_editor_absoluteX="114dp"
            tools:layout_editor_absoluteY="402dp" />


    </LinearLayout>
</FrameLayout>